HRMW-1922 - Rename and refactor ClientDirectoriesController
Replaced ClientDirectoriesController with DirectoryController for improved clarity. Updated relevant service dependency and method names to reflect changes. Enhanced Excel report generation by integrating ExcelReportRequestDto and ReportType, streamlining the reporting process.